@@ -1,73 +1,69 @@
 #VRML V2.0 utf8
 
 WorldInfo {
-  info	[ "Created in CosmoWorlds",
-	    "Packaged by CosmoPackage" ]
+  info [ "Created in CosmoWorlds", "Packaged by CosmoPackage" ]
 }
+
 DEF ZoomButton Transform {
-  children	[
+  children [
     DEF TextAnim Transform {
-      children	[
-	Group {
-	  children	[
-	    DEF clothing-Scale Group {
-	      children	DEF Time TimeSensor {
-		cycleInterval	1
-		enabled	TRUE
-		startTime	982011883.17776
-		stopTime	1
-	      }
-
-	    }
-	    DEF TextAnimScaleFactorInterp PositionInterpolator {
-	      key	[ 0, 0.1, 0.2, 0.3,
-		        0.5, 0.6, 0.7, 0.8,
-		        0.9, 1 ]
-	      keyValue	[ 1 1 1,
-		        1.26589 1.26589 1.26589,
-		        1.20189 1.20189 1.20189,
-		        1.10665 1.10665 1.10665,
-		        1.15824 1.15824 1.15824,
-		        1.16296 1.16296 1.16296,
-		        1.16355 1.16355 1.16355,
-		        1.16178 1.16178 1.16178,
-		        1.15942 1.15942 1.15942,
-		        1.15824 1.15824 1.15824 ]
-	    }
-	  ]
-	}
-	DEF glow Transform {
-	  children	Inline {
-	    url	"buttonglow.wrl"
-	    bboxCenter	-0.009163 -0.00586285 -0.0146308
-	    bboxSize	0.349802 0.0658565 0
-	  }
-
-	}
-	DEF st Transform {
-	  children	Inline {
-	    url	"st-represent.wrl"
-	    bboxCenter	0 -5.58011e-05 -0.0082446
-	    bboxSize	0.24325 0.062914 0.0346594
-	  }
-
-	  center	0 -1.86265e-09 -0.0082446
-	}
+      translation -5.96046e-08 -1.12157e-10 5.46342e-10
+      center 0.133932 -1.67929e-08 -1.11759e-08
+      children [
+        Group {
+          children [
+            DEF clothing-Scale Group {
+              children DEF Time TimeSensor {
+                startTime 982011883.17776
+                stopTime 1
+              }
+            }
+            DEF TextAnimScaleFactorInterp PositionInterpolator {
+              key [ 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ]
+              keyValue [ 1 1 1, 1.26589 1.26589 1.26589, 1.20189 1.20189 1.20189, 1.10665 1.10665 1.10665, 1.15824 1.15824 1.15824, 1.16296 1.16296 1.16296, 1.16355 1.16355 1.16355, 1.16178 1.16178 1.16178, 1.15942 1.15942 1.15942, 1.15824 1.15824 1.15824 ]
+            }
+          ]
+        }
+        DEF glow Transform {
+          children Inline {
+            url "buttonglow.wrl"
+            bboxSize 0.349802 0.0658565 0
+            bboxCenter -0.009163 -0.00586285 -0.0146308
+          }
+        }
+        DEF st Transform {
+          center 0 -1.86265e-09 -0.0082446
+          children Inline {
+            url "st-represent.wrl"
+            bboxSize 0.24325 0.062914 0.0346594
+            bboxCenter 0 -5.58011e-05 -0.0082446
+          }
+        }
       ]
-      translation	-5.96046e-08 -1.12157e-10 5.46342e-10
-      scale	1 1 1
-      center	0.133932 -1.67929e-08 -1.11759e-08
     }
     DEF vs Transform {
-      children	DEF _3 VisibilitySensor {
-	center	0 0 -0.012
-	size	0.3 0.12 0.03
-      }
-
-      center	0 0 0
+      children [
+        DEF _3 VisibilitySensor {
+          size 0.3 0.12 0.03
+          center 0 0 -0.012
+        }
+        Transform {
+          translation 0 0 -0.012
+          scale 0.3 0.12 0.03
+          children Shape {
+            appearance Appearance {
+              material Material {
+                transparency 0.5
+              }
+            }
+            geometry Box { }
+          }
+        }
+      ]
     }
   ]
 }
+
 ROUTE _3.isActive TO Time.set_enabled
 ROUTE _3.enterTime TO Time.set_startTime
 ROUTE Time.fraction_changed TO TextAnimScaleFactorInterp.set_fraction
