@@ -1,3 +1,11 @@
+2013-01-22  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
+	* test.wrl:
+	* Number.wrl:
+	* zoom-represent.wrl:
+	* VisibilitySensor.wrl: 
+
 2013-01-21  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
